--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -19,15 +19,15 @@
         <div class="card-body">
             <h2 class="card-title">
                 <a class="text-dark" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-                {% if post.rating %}
+                <!-- {% if post.rating %}
                 <div class="mb-2 mt-2 font-weight-normal">
                 {% include star_rating_postbox.html %}
                 </div>
-                {% endif %}
+                {% endif %} -->
             </h2>
             <h4 class="card-text">{{ post.excerpt | strip_html | truncatewords:30 }}</h4>
         </div>
-        <div class="card-footer bg-white">
+        <!-- <div class="card-footer bg-white">
             <div class="wrapfooter">
                 {% if post.author %}
                 <span class="meta-footer-thumb">
@@ -44,7 +44,7 @@
                 </span>
                 <div class="clearfix"></div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 <!-- end post -->
