--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ post_class: post-template
     <!-- Post Title -->
     <h1 class="posttitle">{{ page.title }}</h1>
     <!-- Author & Date  Box -->
-    {% assign author = site.authors[page.author] %}
+    <!-- {% assign author = site.authors[page.author] %}
     {% if page.author %}
     <div class="d-flex align-items-center mt-4">
         <div>
@@ -27,7 +27,7 @@ post_class: post-template
         {% endif %}
         </div>            
     </div>
-    {% endif %}
+    {% endif %} -->
 </div>
 
 <!-- Adsense under title if enabled from _config.yml (change your pub id and slot) -->
@@ -44,7 +44,7 @@ post_class: post-template
 <!-- Rating -->
 {% if page.rating %}
 <div class="rating mt-4 mb-4 d-flex align-items-center">
-    <strong class="mr-1">Rating:</strong> {% include star_rating.html %}
+    <!-- <strong class="mr-1">Rating:</strong> {% include star_rating.html %} -->
 </div>
 {% endif %}
 
